Basic structure added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 </head>
 <body>
   <main>
+    <aside>
+      <div class="logo">
+        <a href="#"><i class="fab fa-spotify"></i></a>
+        <span>Spotify</span>
+      </div>
+    </aside>
+    <div class="artist-container">
 
+    </div>
   </main>
+
+  <!-- Footer -->
+  <footer>
+
+  </footer>
+  <!-- /Footer -->
+
 </body>
 </html>
