Top lateral nav added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   <!-- /Font-awesome -->
 
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- /Google Font -->
+
   <link rel="stylesheet" href="css/style.css">
   <title>Spotify</title>
 </head>
@@ -17,8 +22,40 @@
     <aside>
       <div class="logo">
         <a href="#"><i class="fab fa-spotify"></i></a>
-        <span>Spotify</span>
+        <p>Spotify</p>
       </div>
+      <nav class="top-nav">
+        <div class="row">
+          <img src="img/home.svg" alt="home">
+          <p class="white-txt">Home</p>
+        </div>
+        <div class="row">
+          <img src="img/search.svg" alt="search">
+          <p class="grey-txt">Cerca</p>
+        </div>
+        <div class="row">
+          <img src="img/library.svg" alt="library">
+          <p class="grey-txt">La tua libreria</p>
+        </div>
+        <h4 class="white-txt">PLAYLIST</h4>
+        <div class="row">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <p class="grey-txt">Crea Playlist</p>
+        </div>
+        <div class="column">
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+        </div>
+      </nav>
+      <nav class="bottom-nav">
+        <ul>
+          <li>Jane Doe</li>
+        </ul>
+      </nav>
     </aside>
     <div class="artist-container">
 
