--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <body>
   <main>
     <aside>
-      <div class="logo">
-        <a href="#"><i class="fab fa-spotify"></i></a>
-        <p>Spotify</p>
-      </div>
       <nav class="top-nav">
+        <div class="logo">
+          <a href="#"><i class="fab fa-spotify"></i></a>
+          <p class="logo-text">Spotify</p>
+        </div>
         <div class="row">
           <img src="img/home.svg" alt="home">
           <p class="white-txt">Home</p>
@@ -37,24 +37,27 @@
           <img src="img/library.svg" alt="library">
           <p class="grey-txt">La tua libreria</p>
         </div>
-        <h4 class="white-txt">PLAYLIST</h4>
-        <div class="row">
-          <a href="#"><i class="fas fa-plus"></i></a>
-          <p class="grey-txt">Crea Playlist</p>
-        </div>
-        <div class="column">
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
+        <div class="central-nav">
+          <h4 class="white-txt">PLAYLIST</h4>
+          <div class="row">
+            <a href="#"><i class="fas fa-plus"></i></a>
+            <p class="grey-txt">Crea Playlist</p>
+          </div>
+          <div class="column">
+            <p class="grey-txt">Nome Playlist</p>
+            <p class="grey-txt">Nome Playlist</p>
+            <p class="grey-txt">Nome Playlist</p>
+            <p class="grey-txt">Nome Playlist</p>
+            <p class="grey-txt">Nome Playlist</p>
+            <p class="grey-txt">Nome Playlist</p>
+          </div>
         </div>
       </nav>
       <nav class="bottom-nav">
-        <ul>
-          <li>Jane Doe</li>
-        </ul>
+        <div class="row">
+          <a href="#"><i class="grey-txt fas fa-arrow-circle-down"></i></a>
+          <p class="grey-txt">Installa app</p>
+        </div>
       </nav>
     </aside>
     <div class="artist-container">
