Lateral nav  - temporarily - done

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
           <a href="#"><i class="grey-txt fas fa-arrow-circle-down"></i></a>
           <p class="grey-txt">Installa app</p>
         </div>
+        <hr class="grey-txt">
+        <div class="row">
+          <a href="#"><i class="grey-txt fas fa-user"></i></a>
+          <p class="white-txt">Jane Doe</p>
+        </div>
       </nav>
     </aside>
-    <div class="artist-container">
+    <!-- <div class="artist-container">
 
-    </div>
+    </div> -->
   </main>
 
   <!-- Footer -->
