Artist container started

--- a/index.html
+++ b/index.html
@@ -65,9 +65,58 @@
         </div>
       </nav>
     </aside>
-    <!-- <div class="artist-container">
-
-    </div> -->
+    <div class="main-content">
+      <div class="banner">
+        <button class="btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
+      </div>
+      <div>
+        <ul class="categories">
+          <li class="underline">IN EVIDENZA</li>
+          <li>PODCAST</li>
+          <li>CLASSIFICHE</li>
+          <li>GENERI E MOOD</li>
+          <li>NUOVE USCITE</li>
+          <li>SCOPRI</li>
+        </ul>
+      </div>
+      <div class="container">
+        <h2 class="white-txt">Recently played</h2>
+        <div class="artist-container">
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <h5 class="white-txt">Heavy Metal</h5>
+            <p>Subtle</p>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
+            <p>Kyle Dixon & Michael Stein</p>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+          </div>
+          <div class="artist-box">
+            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- Footer -->
