--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- /Google Font -->
 
   <link rel="stylesheet" href="css/style.css">
@@ -37,20 +37,20 @@
           <img src="img/library.svg" alt="library">
           <p class="grey-txt">La tua libreria</p>
         </div>
-        <div class="central-nav">
-          <h4 class="white-txt">PLAYLIST</h4>
-          <div class="row">
-            <a href="#"><i class="fas fa-plus"></i></a>
-            <p class="grey-txt">Crea Playlist</p>
-          </div>
-          <div class="column">
-            <p class="grey-txt">Nome Playlist</p>
-            <p class="grey-txt">Nome Playlist</p>
-            <p class="grey-txt">Nome Playlist</p>
-            <p class="grey-txt">Nome Playlist</p>
-            <p class="grey-txt">Nome Playlist</p>
-            <p class="grey-txt">Nome Playlist</p>
-          </div>
+      </nav>
+      <nav class="central-nav">
+        <h4 class="white-txt">PLAYLIST</h4>
+        <div class="row">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <p class="grey-txt">Crea Playlist</p>
+        </div>
+        <div class="column">
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
+          <p class="grey-txt">Nome Playlist</p>
         </div>
       </nav>
       <nav class="bottom-nav">
@@ -69,7 +69,7 @@
       <div class="banner">
         <button class="btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
       </div>
-      <div>
+      <div class="bottom-content">
         <ul class="categories">
           <li class="underline">IN EVIDENZA</li>
           <li>PODCAST</li>
@@ -78,41 +78,41 @@
           <li>NUOVE USCITE</li>
           <li>SCOPRI</li>
         </ul>
-      </div>
-      <div class="container">
-        <h2 class="white-txt">Recently played</h2>
-        <div class="artist-container">
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-            <h5 class="white-txt">Heavy Metal</h5>
-            <p>Subtle</p>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-            <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
-            <p>Kyle Dixon & Michael Stein</p>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
-          </div>
-          <div class="artist-box">
-            <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-            <div class="artist-play"><i class="far fa-play-circle"></i></div>
+        <div class="container">
+          <h2 class="white-txt">Recently played</h2>
+          <div class="artist-container">
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Heavy Metal</h5>
+              <p>Subtle</p>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
+              <p>Kyle Dixon & Michael Stein</p>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
           </div>
         </div>
       </div>
