--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <aside>
       <nav class="top-nav">
         <div class="logo">
-          <a href="#"><i class="fab fa-spotify"></i></a>
-          <p class="logo-text">Spotify</p>
+          <a href="#"><i class="white-txt fab fa-spotify"></i></a>
+          <p class="white-txt logo-text">Spotify</p>
         </div>
         <div class="row">
           <img src="img/home.svg" alt="home">
@@ -44,21 +44,21 @@
           <a href="#"><i class="fas fa-plus"></i></a>
           <p class="grey-txt">Crea Playlist</p>
         </div>
-        <div class="column">
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-          <p class="grey-txt">Nome Playlist</p>
-        </div>
+        <ul class="column">
+          <li class="grey-txt">Nome Playlist</li>
+          <li class="grey-txt">Nome Playlist</li>
+          <li class="grey-txt">Nome Playlist</li>
+          <li class="grey-txt">Nome Playlist</li>
+          <li class="grey-txt">Nome Playlist</li>
+          <li class="grey-txt">Nome Playlist</li>
+        </ul>
       </nav>
       <nav class="bottom-nav">
         <div class="row">
           <a href="#"><i class="grey-txt fas fa-arrow-circle-down"></i></a>
           <p class="grey-txt">Installa app</p>
         </div>
-        <hr class="grey-txt">
+        <hr>
         <div class="row">
           <a href="#"><i class="grey-txt fas fa-user"></i></a>
           <p class="white-txt">Jane Doe</p>
