Added more elements to Main Content / Inner Content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="banner">
         <button class="btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
       </div>
-      <div class="bottom-content">
+      <div class="inner-content">
         <ul class="categories">
           <li class="underline">IN EVIDENZA</li>
           <li>PODCAST</li>
@@ -80,7 +80,7 @@
         </ul>
         <div class="container">
           <h2 class="white-txt">Recently played</h2>
-          <div class="artist-container">
+          <div class="carousel">
             <div class="artist-box">
               <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
               <div class="artist-play"><i class="far fa-play-circle"></i></div>
@@ -112,6 +112,42 @@
             <div class="artist-box">
               <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
               <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <h2 class="white-txt">Creato per Jane Doe</h2>
+          <p>Più ascolti, più curati saranno i suggerimenti.</p>
+          <div class="carousel">
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Heavy Metal</h5>
+              <p>Subtle</p>
+            </div>
+            <div class="artist-box">
+              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
+              <p>Kyle Dixon & Michael Stein</p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <h2 class="white-txt">Artisti più popolari</h2>
+          <p>Più ascolti, più curati saranno i suggerimenti.</p>
+          <div class="carousel">
+            <div class="artist-box">
+              <img class="circle artist-img" src="img/artist-1.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Heavy Metal</h5>
+              <p>Subtle</p>
+            </div>
+            <div class="artist-box">
+              <img class="circle artist-img" src="img/artist-2.jpeg" alt="artist">
+              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
+              <p>Kyle Dixon & Michael Stein</p>
             </div>
           </div>
         </div>
