Inner Content done

--- a/index.html
+++ b/index.html
@@ -81,37 +81,53 @@
         <div class="container">
           <h2 class="white-txt">Recently played</h2>
           <div class="carousel">
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Heavy Metal</h5>
-              <p>Subtle</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/cortini.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Illusion OfTime</h5>
+                <p>Alessandro Cortini</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
-              <p>Kyle Dixon & Michael Stein</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/xxxtentation.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">?</h5>
+                <p>XXXTENTATION</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/burzum.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Det Som Engang Var</h5>
+                <p>Burzum</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/shlomo.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Dark Red</h5>
+                <p>Shlomo</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/alabama.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Sound & Color</h5>
+                <p>Alabama Shakes</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-            </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/salem.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">King Knight</h5>
+                <p>Salem</p>
+              </div>
             </div>
           </div>
         </div>
@@ -119,17 +135,21 @@
           <h2 class="white-txt">Creato per Jane Doe</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
           <div class="carousel">
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Heavy Metal</h5>
-              <p>Subtle</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/yunglean.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Poison Ivy</h5>
+                <p>Yung Lean</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="artist-img" src="img/artist-2.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
-              <p>Kyle Dixon & Michael Stein</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="artist-img" src="img/moses.jpg" alt="artist">
+                <div class="overlay"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">græ</h5>
+                <p>Moses Sumney</p>
+              </div>
             </div>
           </div>
         </div>
@@ -137,17 +157,21 @@
           <h2 class="white-txt">Artisti più popolari</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
           <div class="carousel">
-            <div class="artist-box">
-              <img class="circle artist-img" src="img/artist-1.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Heavy Metal</h5>
-              <p>Subtle</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="circle artist-img" src="img/fkatwigs.jpg" alt="artist">
+                <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Magdalene</h5>
+                <p>FKA twigs</p>
+              </div>
             </div>
-            <div class="artist-box">
-              <img class="circle artist-img" src="img/artist-2.jpeg" alt="artist">
-              <div class="artist-play"><i class="far fa-play-circle"></i></div>
-              <h5 class="white-txt">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
-              <p>Kyle Dixon & Michael Stein</p>
+            <div class="ciao">
+              <div class="artist-box">
+                <img class="circle artist-img" src="img/aliceinchains.jpg" alt="artist">
+                <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
+                <h5 class="white-txt">Jar Of Flies</h5>
+                <p>Alice In Chains</p>
+              </div>
             </div>
           </div>
         </div>
