Album's height changed after Alessio's hint
(need to be validated from some1)

--- a/index.html
+++ b/index.html
@@ -81,53 +81,53 @@
         <div class="container">
           <h2 class="white-txt">Recently played</h2>
           <div class="carousel">
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/cortini.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Illusion OfTime</h5>
-                <p>Alessandro Cortini</p>
               </div>
+              <h5 class="white-txt">Illusion OfTime</h5>
+              <p>Alessandro Cortini</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/xxxtentation.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">?</h5>
-                <p>XXXTENTATION</p>
               </div>
+              <h5 class="white-txt">?</h5>
+              <p>XXXTENTATION</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/burzum.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Det Som Engang Var</h5>
-                <p>Burzum</p>
               </div>
+              <h5 class="white-txt">Det Som Engang Var</h5>
+              <p>Burzum</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/shlomo.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Dark Red</h5>
-                <p>Shlomo</p>
               </div>
+              <h5 class="white-txt">Dark Red</h5>
+              <p>Shlomo</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/alabama.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Sound & Color</h5>
-                <p>Alabama Shakes</p>
               </div>
+              <h5 class="white-txt">Sound & Color</h5>
+              <p>Alabama Shakes</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/salem.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">King Knight</h5>
-                <p>Salem</p>
               </div>
+              <h5 class="white-txt">King Knight</h5>
+              <p>Salem</p>
             </div>
           </div>
         </div>
@@ -135,21 +135,21 @@
           <h2 class="white-txt">Creato per Jane Doe</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
           <div class="carousel">
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/yunglean.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Poison Ivy</h5>
-                <p>Yung Lean</p>
               </div>
+              <h5 class="white-txt">Poison Ivy</h5>
+              <p>Yung Lean</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="artist-img" src="img/moses.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">græ</h5>
-                <p>Moses Sumney</p>
               </div>
+              <h5 class="white-txt">græ</h5>
+              <p>Moses Sumney</p>
             </div>
           </div>
         </div>
@@ -157,20 +157,18 @@
           <h2 class="white-txt">Artisti più popolari</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
           <div class="carousel">
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="circle artist-img" src="img/fkatwigs.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Magdalene</h5>
-                <p>FKA twigs</p>
               </div>
+              <h5 class="white-txt">Magdalene</h5>
+              <p>FKA twigs</p>
             </div>
-            <div class="ciao">
-              <div class="artist-box">
+            <div class="artist-box">
+              <div class="artist-album">
                 <img class="circle artist-img" src="img/aliceinchains.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
-                <h5 class="white-txt">Jar Of Flies</h5>
-                <p>Alice In Chains</p>
               </div>
             </div>
           </div>
@@ -181,7 +179,28 @@
 
   <!-- Footer -->
   <footer>
+    <div class="footer-left">
+      <img src="img/cortini.jpg" alt="artist">
+      <div class="artist-playing">
+        <h4 class="white-txt">Alessandro Cortini</h4>
+        <p class="grey-txt">Enter Exit</p>
+      </div>
+      <a href="#"><i class="far fa-heart"></i></a>
+      <a href="#"><i class="far fa-folder"></i></a>
+    </div>
+    <div class="footer-central">
+      <div class="player-control">
+        <div class="play-button">
+          <a href="#"><i class="fas fa-random"></i></a>
+        </div>
+        <div class="play-bar">
 
+        </div>
+      </div>
+    </div>
+    <div class="footer-right">
+      halo
+    </div>
   </footer>
   <!-- /Footer -->
 
