--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
       <nav class="top-nav">
         <div class="logo">
           <a href="#"><i class="white-txt fab fa-spotify"></i></a>
-          <p class="white-txt logo-text">Spotify</p>
+          <a href="#"><p class="white-txt logo-text">Spotify</p></a>
         </div>
         <div class="row">
-          <img src="img/home.svg" alt="home">
-          <p class="white-txt">Home</p>
+          <a href="#"><img src="img/home.svg" alt="home"></a>
+          <a href="#"><p class="white-txt">Home</p></a>
         </div>
         <div class="row">
-          <img src="img/search.svg" alt="search">
-          <p class="grey-txt">Cerca</p>
+          <a href="#"><img src="img/search.svg" alt="search"></a>
+          <a href="#"><p class="grey-txt">Cerca</p></a>
         </div>
         <div class="row">
-          <img src="img/library.svg" alt="library">
-          <p class="grey-txt">La tua libreria</p>
+          <a href="#"><img src="img/library.svg" alt="library"></a>
+          <a href="#"><p class="grey-txt">La tua libreria</p></a>
         </div>
       </nav>
       <nav class="central-nav">
-        <h4 class="white-txt">PLAYLIST</h4>
+        <a href="#"><h4 class="white-txt">PLAYLIST</h4></a>
         <div class="row">
           <a href="#"><i class="fas fa-plus"></i></a>
-          <p class="grey-txt">Crea Playlist</p>
+          <a href="#"><p class="grey-txt">Crea Playlist</p></a>
         </div>
         <ul class="column">
           <li class="grey-txt">Nome Playlist</li>
@@ -56,18 +56,18 @@
       <nav class="bottom-nav">
         <div class="row">
           <a href="#"><i class="grey-txt fas fa-arrow-circle-down"></i></a>
-          <p class="grey-txt">Installa app</p>
+          <a href="#"><p class="grey-txt">Installa app</p></a>
         </div>
         <hr>
         <div class="row">
           <a href="#"><i class="grey-txt fas fa-user"></i></a>
-          <p class="white-txt">Jane Doe</p>
+          <a href="#"><p class="white-txt">Jane Doe</p></a>
         </div>
       </nav>
     </aside>
     <div class="main-content">
       <div class="banner">
-        <button class="btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
+        <button class="upgrade-btn btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
       </div>
       <div class="inner-content">
         <ul class="categories">
@@ -79,55 +79,55 @@
           <li>SCOPRI</li>
         </ul>
         <div class="container">
-          <h2 class="white-txt">Recently played</h2>
+          <a href="#"><h2 class="white-txt">Recently played</h2></a>
           <div class="carousel">
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/cortini.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Illusion OfTime</h5>
-              <p>Alessandro Cortini</p>
+              <a href="#"><h5 class="white-txt">Illusion OfTime</h5></a>
+              <a href="#"><p>Alessandro Cortini</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/xxxtentation.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">?</h5>
-              <p>XXXTENTATION</p>
+              <a href="#"><h5 class="white-txt">?</h5></a>
+              <a href="#"><p>XXXTENTATION</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/burzum.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Det Som Engang Var</h5>
-              <p>Burzum</p>
+              <a href="#"><h5 class="white-txt">Det Som Engang Var</h5></a>
+              <a href="#"><p>Burzum</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/shlomo.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Dark Red</h5>
-              <p>Shlomo</p>
+              <a href="#"><h5 class="white-txt">Dark Red</h5></a>
+              <a href="#"><p>Shlomo</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/alabama.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Sound & Color</h5>
-              <p>Alabama Shakes</p>
+              <a href="#"><h5 class="white-txt">Sound & Color</h5></a>
+              <a href="#"><p>Alabama Shakes</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/salem.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">King Knight</h5>
-              <p>Salem</p>
+              <a href="#"><h5 class="white-txt">King Knight</h5></a>
+              <a href="#"><p>Salem</p></a>
             </div>
           </div>
         </div>
@@ -140,16 +140,16 @@
                 <img class="artist-img" src="img/yunglean.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Poison Ivy</h5>
-              <p>Yung Lean</p>
+              <a href="#"><h5 class="white-txt">Poison Ivy</h5></a>
+              <a href="#"><p>Yung Lean</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="artist-img" src="img/moses.jpg" alt="artist">
                 <div class="overlay"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">græ</h5>
-              <p>Moses Sumney</p>
+              <a href="#"><h5 class="white-txt">græ</h5></a>
+              <a href="#"><p>Moses Sumney</p></a>
             </div>
           </div>
         </div>
@@ -162,14 +162,16 @@
                 <img class="circle artist-img" src="img/fkatwigs.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
               </div>
-              <h5 class="white-txt">Magdalene</h5>
-              <p>FKA twigs</p>
+              <a href="#"><h5 class="white-txt">Magdalene</h5></a>
+              <a href="#"><p>FKA twigs</p></a>
             </div>
             <div class="artist-box">
               <div class="artist-album">
                 <img class="circle artist-img" src="img/aliceinchains.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
               </div>
+              <a href="#"><h5 class="white-txt">Jar Of Flies</h5></a>
+              <a href="#"><p>Alice In Chains</p></a>
             </div>
           </div>
         </div>
@@ -180,10 +182,10 @@
   <!-- Footer -->
   <footer>
     <div class="footer-left">
-      <img src="img/cortini.jpg" alt="artist">
+      <a href="#"><img src="img/cortini.jpg" alt="artist"></a>
       <div class="artist-playing">
-        <h4 class="white-txt">Alessandro Cortini</h4>
-        <p class="grey-txt">Enter Exit</p>
+        <a href="#"><h4 class="white-txt">Alessandro Cortini</h4></a>
+        <a href="#"><p class="grey-txt">Enter Exit</p></a>
       </div>
       <a href="#"><i class="far fa-heart"></i></a>
       <a href="#"><i class="far fa-folder"></i></a>
@@ -191,15 +193,24 @@
     <div class="footer-central">
       <div class="player-control">
         <div class="play-button">
-          <a href="#"><i class="fas fa-random"></i></a>
+          <a href="#"><i class="white-txt fas fa-random"></i></a>
+          <a href="#"><i class="white-txt fas fa-step-backward"></i></a>
+          <a href="#"><i class="white-txt far fa-play-circle"></i></a>
+          <a href="#"><i class="white-txt fas fa-step-forward"></i></a>
+          <a href="#"><i class="white-txt fas fa-redo-alt"></i></a>
         </div>
         <div class="play-bar">
-
+          <a class="white-txt" href="#">0.25</a>
+          <div class="bar"></div>
+          <a class="white-txt" href="#">3.59</a>
         </div>
       </div>
     </div>
     <div class="footer-right">
-      halo
+      <a href="#"><i class="white-txt fas fa-list"></i></a>
+      <a href="#"><i class="white-txt fas fa-desktop"></i></a>
+      <a href="#"><i class="white-txt fas fa-volume-up"></i></a>
+      <div class="bar"></div>
     </div>
   </footer>
   <!-- /Footer -->
