Details w/ :hover added
* Footer bars tbd *

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
       <nav class="central-nav">
         <a href="#"><h4 class="white-txt">PLAYLIST</h4></a>
-        <div class="row">
+        <div class="row ">
           <a href="#"><i class="fas fa-plus"></i></a>
           <a href="#"><p class="grey-txt">Crea Playlist</p></a>
         </div>
@@ -79,7 +79,7 @@
           <li>SCOPRI</li>
         </ul>
         <div class="container">
-          <a href="#"><h2 class="white-txt">Recently played</h2></a>
+          <h2 class="white-txt">Recently played</h2>
           <div class="carousel">
             <div class="artist-box">
               <div class="artist-album">
