--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
       <nav class="central-nav">
         <a href="#"><h4 class="white-txt">PLAYLIST</h4></a>
-        <div class="row ">
+        <div class="row playlist-plus">
           <a href="#"><i class="fas fa-plus"></i></a>
           <a href="#"><p class="grey-txt">Crea Playlist</p></a>
         </div>
