Footer responsive @max 554px + @max589px

--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
         <a href="#"><h4 class="white-txt">Alessandro Cortini</h4></a>
         <a href="#"><p class="grey-txt">Enter Exit</p></a>
       </div>
-      <a href="#"><i class="far fa-heart"></i></a>
-      <a href="#"><i class="far fa-folder"></i></a>
+      <div class="like-save">
+        <a href="#"><i class="far fa-heart"></i></a>
+        <a href="#"><i class="far fa-folder"></i></a>
+      </div>
     </div>
     <div class="footer-central">
       <div class="player-control">
