All responsive <570px

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
           <a href="#"><p class="white-txt logo-text">Spotify</p></a>
         </div>
         <div class="row">
-          <a href="#"><img src="img/home.svg" alt="home"></a>
+          <a href="#"><img src="img/home.png" alt="home"></a>
           <a href="#"><p class="white-txt">Home</p></a>
         </div>
         <div class="row">
-          <a href="#"><img src="img/search.svg" alt="search"></a>
+          <a href="#"><img src="img/search.png" alt="search"></a>
           <a href="#"><p class="grey-txt">Cerca</p></a>
         </div>
         <div class="row">
-          <a href="#"><img src="img/library.svg" alt="library"></a>
+          <a href="#"><img src="img/library.png" alt="library"></a>
           <a href="#"><p class="grey-txt">La tua libreria</p></a>
         </div>
       </nav>
