Media query's breaking point changed

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <h2 class="white-txt">Artisti più popolari</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
           <div class="carousel">
-            <div class="artist-box">
+            <div class="artist-box circle-box">
               <div class="artist-album">
                 <img class="circle artist-img" src="img/fkatwigs.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
@@ -165,7 +165,7 @@
               <a href="#"><h5 class="white-txt">Magdalene</h5></a>
               <a href="#"><p>FKA twigs</p></a>
             </div>
-            <div class="artist-box">
+            <div class="artist-box circle-box">
               <div class="artist-album">
                 <img class="circle artist-img" src="img/aliceinchains.jpg" alt="artist">
                 <div class="overlay overlay-circle"><i class="far fa-play-circle"></i></div>
