Various changes (see description)
Footer in relative + banner index + artist-box width w/ calc + new media query + volume bar + minus changes

--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
         </div>
         <div class="play-bar">
           <a class="white-txt" href="#">0.25</a>
-          <div class="bar"></div>
+          <div class="bar">
+            <i class="fas fa-circle"></i>
+          </div>
           <a class="white-txt" href="#">3.59</a>
         </div>
       </div>
