Footer bar animation added

--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
       <a href="#"><i class="white-txt fas fa-list"></i></a>
       <a href="#"><i class="white-txt fas fa-desktop"></i></a>
       <a href="#"><i class="white-txt fas fa-volume-up"></i></a>
-      <div class="bar"></div>
+      <div class="volume">
+        <div class="bar">
+          <i class="fas fa-circle"></i>
+        </div>
+      </div>
     </div>
   </footer>
   <!-- /Footer -->
